@@ -3,6 +3,7 @@ Release 1.14
 #79 Simplified API to start request processor builders
 #80 ILinkRestService and related builders API refactoring for consistency
 #81 LinkRestRuntime should implement JAX RS Feature
+#82 LinkRestBuilder: a static shortcut for simple LinkRest stack
 
 Release 1.13
 
